--- a/app/src/main/res/layout/item_best_of_month.xml
+++ b/app/src/main/res/layout/item_best_of_month.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="143dp"
-    android:layout_height="207dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="207dp">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+        android:id="@+id/card_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_margin="5dp"
-        android:layout_height="match_parent"
-        app:cardCornerRadius="10dp">
+        app:cardCornerRadius="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
             android:id="@+id/home_screen_frame_1_img"
@@ -21,4 +27,4 @@
 
     </androidx.cardview.widget.CardView>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
