--- a/app/src/main/res/layout/activity_cat_list.xml
+++ b/app/src/main/res/layout/activity_cat_list.xml
@@ -34,7 +34,8 @@
         android:id="@+id/catList_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/catImages_count">
+        android:layout_below="@+id/catImages_count"
+        android:padding="5dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
