--- a/app/src/main/res/layout/activity_final.xml
+++ b/app/src/main/res/layout/activity_final.xml
@@ -24,23 +24,25 @@
             android:id="@+id/button_download"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:backgroundTint="@color/white"
-            android:background="@drawable/navbar_download_icon"
-            android:layout_alignParentLeft="true"
+            android:src="@drawable/save_button"
+            android:background="@drawable/icon_background"
+            android:layout_alignParentStart="true"
             android:layout_marginStart="85dp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="85dp"/>
+            app:tint="@color/white"
+            />
 
         <ImageView
             android:id="@+id/button_set_wallpaper"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:backgroundTint="@color/white"
-            android:background="@drawable/navbar_set_wallpaper"
-            android:layout_alignParentRight="true"
+            android:src="@drawable/apply_button"
+            android:background="@drawable/icon_background"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="85dp"
-            android:layout_marginRight="85dp"/>
+            app:tint="@color/white"
+            />
 
 
     </RelativeLayout>
