--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -14,15 +14,6 @@
         tools:ignore="MissingConstraints">
 
         <ImageView
-            android:layout_width="48dp"
-            android:layout_height="11dp"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="2dp"
-            android:background="@drawable/kotlin_logo"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
@@ -68,13 +59,27 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="20dp"
         android:fontFamily="@font/nunito_semi_bold"
         android:gravity="center"
         android:text="BY\n Shamas Nisar"
         android:textColor="@color/heading_color"
         android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:layout_width="48dp"
+        android:layout_height="11dp"
+        android:background="@drawable/kotlin_logo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView"
+        android:layout_marginTop="0dp"
+        tools:ignore="MissingConstraints" />
 
 
 
