--- a/app/src/main/res/layout/item_best_of_month.xml
+++ b/app/src/main/res/layout/item_best_of_month.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="143dp"
     android:layout_height="207dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -15,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/frame_1_img"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop"
+            tools:ignore="ContentDescription" />
 
     </androidx.cardview.widget.CardView>
 
