--- a/app/src/main/res/layout/item_categories.xml
+++ b/app/src/main/res/layout/item_categories.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     
     <androidx.cardview.widget.CardView
@@ -35,7 +35,7 @@
                 android:fontFamily="@font/nunito_bold"
                 android:textColor="@color/white"
                 android:layout_centerInParent="true"
-                android:textSize="20dp"/>
+                android:textSize="20sp"/>
 
         </RelativeLayout>
 
